--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
 }
 
+#buy {
+  position: fixed;
+  width: 100%;
+  height: 700px;
+  cursor: pointer;
+}
+
 #homepage-logo {
   width: 100%;
   max-width: 700px;
