--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@ body {
   cursor: pointer;
 }
 
+.buy {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
 #homepage-logo {
   width: 100%;
   max-width: 700px;
